--- a/sources/1.1.0/part-c/sections/03-references.adoc
+++ b/sources/1.1.0/part-c/sections/03-references.adoc
@@ -31,5 +31,7 @@ span:classification[Technical Guidelines].
 
 * [[[S121,IHO S-121]]]
 
+* [[[ISO19123,hidden(ISO 19123)]]]
+
 NOTE: In this document, "S-100" means S-100 Edition 4.0.0 unless a different edition
 is explicitly identified.
