--- a/sources/1.1.0/part-b/document.adoc
+++ b/sources/1.1.0/part-b/document.adoc
@@ -1,6 +1,9 @@
 = IHO Guidelines for Creating S-100 Product Specifications -- Part B: Steps in the Development of a Product Specification
 :series: S
 :docnumber: 97
+:partnumber: B
+:title: IHO Guidelines for Creating S-100 Product Specifications
+:title-part: Steps in the Development of a Product Specification
 :doctype: specification
 :edition: 1.1.0
 :language: en
@@ -8,7 +11,7 @@
 :copyright-year: 2020
 :status: in-force
 :committee: hssc
-:workgroup: S-100
+:workgroup: s100
 :mn-document-class: iho
 :mn-output-extensions: xml,html,doc,pdf,rxl
 :local-cache-only:
